pkg/plugins/policies/meshhttproute/plugin/v1alpha1/testdata/default-meshexternalservice.listeners.golden.yaml
resources:
- name: outbound:10.20.20.1:9090
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 10.20.20.1
        portValue: 9090
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          normalizePath: true
          routeConfig:
            name: kri_extsvc_default___example_
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: default_example___extsvc_9090
              routes:
              - match:
                  prefix: /
                name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
                route:
                  autoHostRewrite: true
                  cluster: kri_extsvc_default___example_
                  timeout: 0s
          statPrefix: default_example___extsvc_9090
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/unified-name: kri_extsvc_default___example_
    name: outbound:10.20.20.1:9090
    trafficDirection: OUTBOUND
